# rgeometry-demo

./: Cargo.toml  README.md
benches/: benchmark.rs  boolean.rs  delaunay.rs
core/: Cargo.toml
core/benches/: benchmark.rs  boolean.rs  delaunay.rs  intersects.rs
core/src/: aabb.rs  boolean.rs  delaunay.rs  intersections.rs  lib.rs  raster.rs  visibility.rs
core/tests/: delaunay_invariant.rs
docs/: gui.js  gui_bg.wasm  index.html  rgeometry_playground.js  rgeometry_playground_bg.wasm  wrangler.toml
gui/: Cargo.toml
gui/src/: boolean.rs  boolean2.rs  boolean_tri.rs  cdt.rs  delaunay.rs  gridnet.rs  intersections.rs  lib.rs  raster.rs
sh/: build_demo_web.sh
src/: boolean.rs  delaunay.rs  lib.rs  main.rs  raster.rs  rester.rs
src/demo/: boolean.rs  boolean_tri.rs  cdt.rs  delaunay.rs  gridnet.rs  mod.rs  raster.rs  rester.rs
tests/: delaunay_invariant.rs
wasm/: .gitignore  Cargo.toml  index.js  package-lock.json  package.json
wasm/src/: lib.rs
