[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.62"
rand = "0.8.5"
ordslice = "0.3"
rgeometry = { path = "../../rgeometry" }

[dev-dependencies]
criterion = "0.5"
rand_chacha = "0.3.1"

[[bench]]
name = "benchmark"
harness = false

[[bench]]
name = "boolean"
harness = false

[[bench]]
name = "delaunay"
harness = false

[[bench]]
name = "intersects"
harness = false
