[package]
name = "gui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.62"
core = { path = "../core" }
eframe = "0.22.0"
num = "0.4"
num-bigint = "0.4"
num-rational = "0.4"
num-traits = "0.2.*"
rand = "0.8.5"
rand_chacha = "0.3.1"
rgeometry = { path = "../../rgeometry" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
