[package]
name = "asm"
version = "0.1.0"
authors = ["Jihyun Yu <yjh0502@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
core = { path = "../core" }
indexmap = "*"
js-sys = "0.3.59"
rgeometry = { git = "https://github.com/yjh0502/rgeometry", branch = "delaunay" }
wasm-bindgen = "=0.2.93"
